--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * macvlan: allow multiple driver backends
   * Add macvtap driver (Closes: #568755)
   * [ia64] Enable SGI SN support and mspec driver (Closes: #582224)
+  * iwlwifi: Disable QoS when connected to a non-QoS-capable AP
+    (Closes: #578262)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
 
