--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * [ia64] Enable SGI SN support and mspec driver (Closes: #582224)
   * iwlwifi: Disable QoS when connected to a non-QoS-capable AP
     (Closes: #578262)
+  * [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
+    included in 2.6.32.13
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
 
