--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
     (Closes: #578262)
   * [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
     included in 2.6.32.13
+  * [x86] Disable e_powersaver cpufreq driver as unsafe. It has already
+    been blacklisted by cpufrequtils. The acpi-cpufreq driver can be used
+    instead on some VIA C7 systems. (Closes: #566208)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
 
