--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Update Xen patch.
 
+  [ maximilian attems]
+  * Add stable 2.6.32.14-rc1.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
 
 linux-2.6 (2.6.32-13) unstable; urgency=low
