nouveau: Fix fbcon corruption with font width not divisible by 8 (Closes: #583162)
svn path=/dists/sid/linux-2.6/; revision=15766

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * [x86] Disable e_powersaver cpufreq driver as unsafe. It has already
     been blacklisted by cpufrequtils. The acpi-cpufreq driver can be used
     instead on some VIA C7 systems. (Closes: #566208)
+  * nouveau: Fix fbcon corruption with font width not divisible by 8
+    (Closes: #583162)
 
   [ Bastian Blank ]
   * Update Xen patch.
