ext4: Fix compat EXT4_IOC_ADD_GROUP
svn path=/dists/sid/linux-2.6/; revision=15767

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
     instead on some VIA C7 systems. (Closes: #566208)
   * nouveau: Fix fbcon corruption with font width not divisible by 8
     (Closes: #583162)
+  * [amd64] ext4: Fix compat EXT4_IOC_ADD_GROUP (used by online resize)
 
   [ Bastian Blank ]
   * Update Xen patch.
