Install debug kernel image in /usr/lib/debug/boot (Closes: #582810)
svn path=/dists/sid/linux-2.6/; revision=15768

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * nouveau: Fix fbcon corruption with font width not divisible by 8
     (Closes: #583162)
   * [amd64] ext4: Fix compat EXT4_IOC_ADD_GROUP (used by online resize)
+  * Install debug kernel image in /usr/lib/debug/boot (Closes: #582810)
 
   [ Bastian Blank ]
   * Update Xen patch.
