--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * [x86] Reenable rtl8192su, accidentally disabled in previous version
+    (Closes: #580740)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 26 May 2010 02:55:03 +0100
+
 linux-2.6 (2.6.34-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_34
