--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
     (Closes: #583162)
   * [amd64] ext4: Fix compat EXT4_IOC_ADD_GROUP (used by online resize)
   * Install debug kernel image in /usr/lib/debug/boot (Closes: #582810)
+  * net: sysfs: Check for null ethtool_ops before getting speed/duplex
 
   [ Bastian Blank ]
   * Update Xen patch.
