--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   [ maximilian attems]
   * Add stable 2.6.32.14-rc1.
   * Add drm changes from stable 2.6.33.5.
+  * Update openvz patch to 509eb1f29c43.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
 
