--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,9 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * Add drm changes from stable 2.6.33.5.
   * Update openvz patch to 509eb1f29c43.
 
+  [ Martin Michlmayr ]
+  * QNAP TS-419P: Export GPIO indicating jumper setting of JP1.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
 
 linux-2.6 (2.6.32-13) unstable; urgency=low
