--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,6 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * [ia64] Enable SGI SN support and mspec driver (Closes: #582224)
   * iwlwifi: Disable QoS when connected to a non-QoS-capable AP
     (Closes: #578262)
-  * [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
-    included in 2.6.32.13
   * [x86] Disable e_powersaver cpufreq driver as unsafe. It has already
     been blacklisted by cpufrequtils. The acpi-cpufreq driver can be used
     instead on some VIA C7 systems. (Closes: #566208)
@@ -26,7 +24,9 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * Update Xen patch.
 
   [ maximilian attems]
-  * Add stable 2.6.32.14-rc1.
+  * Add stable 2.6.32.14-rc1:
+    - [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
+      included in 2.6.32.13 causing FTBFS
   * Add drm changes from stable 2.6.33.5.
   * Update openvz patch to 509eb1f29c43.
 
