Note that 2.6.33.5 fixes #582427
svn path=/dists/sid/linux-2.6/; revision=15775

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,8 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * Add stable 2.6.32.14-rc1:
     - [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
       included in 2.6.32.13 causing FTBFS
-  * Add drm changes from stable 2.6.33.5.
+  * Add drm changes from stable 2.6.33.5:
+    - i915: Disable FBC on 915GM and 945GM (Closes: #582427)
   * Update openvz patch to 509eb1f29c43.
 
   [ Martin Michlmayr ]
