--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
   * [x86] Reenable rtl8192su, accidentally disabled in previous version
     (Closes: #580740)
 
+  [ maximilian attems ]
+  * topconfig enable CFQ_GROUP_IOSCHED.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 26 May 2010 02:55:03 +0100
 
 linux-2.6 (2.6.34-1~experimental.1) experimental; urgency=low
