--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
     (Closes: #580740)
 
   [ maximilian attems ]
-  * topconfig enable CFQ_GROUP_IOSCHED.
+  * topconfig enable CFQ_GROUP_IOSCHED, MFD_WM8994.
   * [x86] Enable X86_PCC_CPUFREQ.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 26 May 2010 02:55:03 +0100
