--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
   [ maximilian attems ]
   * topconfig enable CFQ_GROUP_IOSCHED, MFD_WM8994, REGULATOR_MAX8649,
     REGULATOR_WM8994.
-  * [x86] Enable X86_PCC_CPUFREQ.
+  * [x86] Enable X86_PCC_CPUFREQ, VGA_SWITCHEROO (closes: #582637).
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 26 May 2010 02:55:03 +0100
 
