--- a/debian/changelog
+++ b/debian/changelog
@@ -19,16 +19,16 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   * [amd64] ext4: Fix compat EXT4_IOC_ADD_GROUP (used by online resize)
   * Install debug kernel image in /usr/lib/debug/boot (Closes: #582810)
   * net: sysfs: Check for null ethtool_ops before getting speed/duplex
+  * Add stable 2.6.32.14:
+    - [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
+      included in 2.6.32.13 causing FTBFS
+    - btrfs: check for read permission on src file in the clone ioctl
+      (CVE-2010-1636)
 
   [ Bastian Blank ]
   * Update Xen patch.
 
   [ maximilian attems]
-  * Add stable 2.6.32.14-rc1:
-    - [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
-      included in 2.6.32.13 causing FTBFS
-    - btrfs: check for read permission on src file in the clone ioctl
-      (CVE-2010-1636)
   * Add drm changes from stable 2.6.33.5:
     - i915: Disable FBC on 915GM and 945GM (Closes: #582427)
   * Update openvz patch to 509eb1f29c43.
