--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * Update Xen patch.
+    - Fix checksum offloading in netback. (closes: #583366)
 
   [ maximilian attems]
   * Add drm changes from stable 2.6.33.5:
