--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
+linux-2.6 (2.6.32-14) unstable; urgency=low
 
   [ Ben Hutchings ]
   * [ia64] Hardcode the output of the scripts under arch/ia64/scripts so
@@ -37,7 +37,7 @@ linux-2.6 (2.6.32-14) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * QNAP TS-419P: Export GPIO indicating jumper setting of JP1.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 18 May 2010 02:13:44 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 29 May 2010 00:32:44 +0100
 
 linux-2.6 (2.6.32-13) unstable; urgency=low
 
