writeback: Fix fall-out of initial fix for the infamous slow-umount bug
Patch fs-explicitly-pass-in-whether-sb-is-pinned-or-not.patch fixed
<https://bugzilla.kernel.org/show_bug.cgi?id=15906> but introduced
some regressions.

Apply fix-ups:
- "writeback: Update dirty flags in two step" fixes behaviour in some
  corner-case
- "writeback: ensure that WB_SYNC_NONE writeback with sb pinned is sync"
  fixes an oops
- "writeback: fix non-integrity write-back" fixes a trivial bug in the
  previous change

Also update fs-explicitly-pass-in-whether-sb-is-pinned-or-not.patch
with the final upstream commit information.

svn path=/dists/trunk/linux-2.6/; revision=15809

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [x86] Reenable rtl8192su, accidentally disabled in previous version
     (Closes: #580740)
+  * writeback: Update dirty flags in two steps
+  * writeback: ensure that WB_SYNC_NONE writeback with sb pinned is sync
+    (Closes: #582808)
+  * writeback: fix non-integrity write-back
 
   [ maximilian attems ]
   * topconfig enable CFQ_GROUP_IOSCHED, MFD_WM8994, REGULATOR_MAX8649,
