--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (2.6.32-15) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * [hppa] Ignore ABI change caused by disabling CONFIG_IDE_TIMINGS
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 31 May 2010 18:46:34 +0100
+
 linux-2.6 (2.6.32-14) unstable; urgency=low
 
   [ Ben Hutchings ]
