[powerpc] Fix unnecessary ABI change
svn path=/dists/sid/linux-2.6/; revision=15815

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ linux-2.6 (2.6.32-15) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [hppa] Ignore ABI change caused by disabling CONFIG_IDE_TIMINGS
+  * [powerpc] Fix unnecessary ABI change
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 31 May 2010 18:46:34 +0100
 
