--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ linux-2.6 (2.6.32-15) UNRELEASED; urgency=low
   * [hppa] Ignore ABI change caused by disabling CONFIG_IDE_TIMINGS
   * [powerpc] Fix unnecessary ABI change
 
+  [ Bastian Blank ]
+  * xen: Fix crash in netback.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 31 May 2010 18:46:34 +0100
 
 linux-2.6 (2.6.32-14) unstable; urgency=low
