Prepare to release linux-2.6 (2.6.32-15).
svn path=/dists/sid/linux-2.6/; revision=15818

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-15) UNRELEASED; urgency=low
+linux-2.6 (2.6.32-15) unstable; urgency=low
 
   [ Ben Hutchings ]
   * [hppa] Ignore ABI change caused by disabling CONFIG_IDE_TIMINGS
@@ -7,7 +7,7 @@ linux-2.6 (2.6.32-15) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * xen: Fix crash in netback.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 31 May 2010 18:46:34 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 01 Jun 2010 01:31:05 +0100
 
 linux-2.6 (2.6.32-14) unstable; urgency=low
 
