--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
+
+  * [hppa] clear floating point exception flag on SIGFPE signal
+    (Closes: #559406)
+
+ -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
+
 linux-2.6 (2.6.32-15) unstable; urgency=low
 
   [ Ben Hutchings ]
