--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
 
+  [ dann frazier ]
   * [hppa] clear floating point exception flag on SIGFPE signal
     (Closes: #559406)
+
+  [ Ben Hutchings ]
+  * Add stable 2.6.32.15
 
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
