--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * Add stable 2.6.32.15
 
+  [ Aurelien Jarno ]
+  * [sh4] fix sh_tmu clocksource following recent nohz changes.
+
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
 linux-2.6 (2.6.32-15) unstable; urgency=low
