Enable X86 board specific fixups for reboot (Closes: #536537)
svn path=/dists/sid/linux-2.6/; revision=15825

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
 
+  [ Moritz Muehlenhoff ]
+  * Enable X86 board specific fixups for reboot (Closes: #536537)
+
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
 linux-2.6 (2.6.32-15) unstable; urgency=low
