--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Add mantis DVB driver and mb86a16 and tda665x DVB front-ends,
     backported by Bjørn Mork (Closes: #577264)
   * Build inet_lro as a module
+  * [sparc] Enable CONFIG_FB_XVR500, CONFIG_FB_XVR2500 (Closes: #508108)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
