[mipsel] Add a loongson-2f flavour [mipsel] Loongson: Define rtc device on MC146818-equipped systems
svn path=/dists/trunk/linux-2.6/; revision=15828

--- a/debian/patches/series/1~experimental.2
+++ b/debian/patches/series/1~experimental.2
@@ -2,3 +2,5 @@
 + bugfix/all/writeback-Update-dirty-flags-in-two-steps.patch
 + bugfix/all/writeback-ensure-WB_SYNC_NONE-writeback-with-sb-pinned-is-sync.patch
 + bugfix/all/writeback-fix-non-integrity-write-back.patch
++ features/all/RTC-rtc-cmos-Fix-binary-mode-support.patch
++ features/mips/MIPS-Loongson-Define-rtc-device-on-MC146818-systems.patch
