--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
   * writeback: ensure that WB_SYNC_NONE writeback with sb pinned is sync
     (Closes: #582808)
   * writeback: fix non-integrity write-back
+  * [mipsel] Add a loongson-2f flavour
+  * [mipsel] Loongson: Define rtc device on MC146818-equipped systems
 
   [ maximilian attems ]
   * topconfig enable CFQ_GROUP_IOSCHED, MFD_WM8994, REGULATOR_MAX8649,
