Revert deletion of drivers/staging/rtl8192su/r8192SU_HWImg.c which no longer contains firmware
svn path=/dists/trunk/linux-2.6/; revision=15830

--- a/debian/patches/series/1~experimental.2
+++ b/debian/patches/series/1~experimental.2
@@ -4,3 +4,4 @@
 + bugfix/all/writeback-fix-non-integrity-write-back.patch
 + features/all/RTC-rtc-cmos-Fix-binary-mode-support.patch
 + features/mips/MIPS-Loongson-Define-rtc-device-on-MC146818-systems.patch
++ debian/revert-removal-of-r8192sU_HWImg-c.patch
