Make gcc-4.4 the default compiler
svn path=/dists/trunk/linux-2.6/; revision=15832

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
   * writeback: fix non-integrity write-back
   * [mipsel] Add a loongson-2f flavour
   * [mipsel] Loongson: Define rtc device on MC146818-equipped systems
+  * Make gcc-4.4 the default compiler
 
   [ maximilian attems ]
   * topconfig enable CFQ_GROUP_IOSCHED, MFD_WM8994, REGULATOR_MAX8649,
