Update Spanish debconf templates, thanks to Omar Campagne (Closes: #580538)
svn path=/dists/sid/linux-2.6/; revision=15836

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     backported by Bjørn Mork (Closes: #577264)
   * Build inet_lro as a module
   * [sparc] Enable CONFIG_FB_XVR500, CONFIG_FB_XVR2500 (Closes: #508108)
+  * Update Spanish debconf templates, thanks to Omar Campagne
+    (Closes: #580538)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
