Prepare to release linux-2.6 (2.6.34-1~experimental.2).
svn path=/dists/trunk/linux-2.6/; revision=15837

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (2.6.34-1~experimental.2) experimental; urgency=low
 
   [ Ben Hutchings ]
   * [x86] Reenable rtl8192su, accidentally disabled in previous version
@@ -42,7 +42,7 @@ linux-2.6 (2.6.34-1~experimental.2) UNRELEASED; urgency=low
   [ Moritz Muehlenhoff ]
   * Enable X86 board specific fixups for reboot (Closes: #536537)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 26 May 2010 02:55:03 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 06 Jun 2010 18:53:04 +0100
 
 linux-2.6 (2.6.34-1~experimental.1) experimental; urgency=low
 
