--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * [sparc] Enable CONFIG_FB_XVR500, CONFIG_FB_XVR2500 (Closes: #508108)
   * Update Spanish debconf templates, thanks to Omar Campagne
     (Closes: #580538)
+  * Revert "Add EC path for Thinkpad X100."; it is incomplete and broken
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
