[powerpc] Enable pata_amd driver, replacing amd74xx
svn path=/dists/sid/linux-2.6/; revision=15842

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Revert "Add EC path for Thinkpad X100."; it is incomplete and broken
   * sctp: fix append error cause to ERROR chunk correctly (regression due
     to fix for CVE-2010-1173)
+  * [powerpc] Enable pata_amd driver, replacing amd74xx
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
