* [mips] backport mips/swarm: fix M3 TLB exception handler.
svn path=/dists/sid/linux-2.6/; revision=15844

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
+  * [mips] backport mips/swarm: fix M3 TLB exception handler.
 
   [ Moritz Muehlenhoff ]
   * Enable X86 board specific fixups for reboot (Closes: #536537)
