--- a/debian/changelog
+++ b/debian/changelog
@@ -128,6 +128,8 @@ linux-2.6 (2.6.32-13) unstable; urgency=low
   [ Aurelien Jarno ]
   * mips/swarm: fix boot from IDE based media (Sebastian Andrzej Siewior)
     (closes: #466977).
+  * backport mips/swarm: fix M3 TLB exception handler.
+    [This patch was actually reverted and never applied in version 2.6.32-13]
   * backport MIPS FPU emulator: allow Cause bits of FCSR to be writeable
     by ctc1. (closes: #580602).
   * mips/swarm: enable adm* hwmon drivers.
