eeepc-laptop: Disable wireless hotplug on more models where the controller is not at the expected address (Closes: #576199)
svn path=/dists/sid/linux-2.6/; revision=15847

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * sctp: fix append error cause to ERROR chunk correctly (regression due
     to fix for CVE-2010-1173)
   * [powerpc] Enable pata_amd driver, replacing amd74xx
+  * eeepc-laptop: Disable wireless hotplug on more models where the
+    controller is not at the expected address (Closes: #576199)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
