revert patch "allow SD/UART1 selection" since it never made it upstream.
svn path=/dists/sid/linux-2.6/; revision=15861

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,10 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   [ Moritz Muehlenhoff ]
   * Enable X86 board specific fixups for reboot (Closes: #536537)
 
+  [ Martin Michlmayr ]
+  * OpenRD-Base: revert patch "allow SD/UART1 selection" since it
+    never made it upstream.
+
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
 linux-2.6 (2.6.32-15) unstable; urgency=low
