ARM: update mach types.
svn path=/dists/sid/linux-2.6/; revision=15862

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * OpenRD-Base: revert patch "allow SD/UART1 selection" since it
     never made it upstream.
+  * ARM: update mach types.
 
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
