--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * OpenRD-Base: revert patch "allow SD/UART1 selection" since it
     never made it upstream.
   * ARM: update mach types.
+  * Add support for OpenRD-Ultimate.
 
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
