--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     never made it upstream.
   * ARM: update mach types.
   * Add support for OpenRD-Ultimate.
+  * QNAP TS-11x/TS-21x: Add MPP36 (RAM) and MPP44 (board ID).
 
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
