--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * ARM: update mach types.
   * Add support for OpenRD-Ultimate.
   * QNAP TS-11x/TS-21x: Add MPP36 (RAM) and MPP44 (board ID).
+  * Add support for the HP t5325 Thin Client.
 
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
