[mips] Fix boot from ATA hard drives (Closes: #584784):
- Set io_map_base for several PCI bridges lacking it
- Replace per-platform built-in IDE drivers with libata-based drivers
- Enable BLK_DEV_SD as built-in on all platforms

svn path=/dists/sid/linux-2.6/; revision=15866

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,10 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * [powerpc] Enable pata_amd driver, replacing amd74xx
   * eeepc-laptop: Disable wireless hotplug on more models where the
     controller is not at the expected address (Closes: #576199)
+  * [mips] Fix boot from ATA hard drives (Closes: #584784):
+    - Set io_map_base for several PCI bridges lacking it
+    - Replace per-platform built-in IDE drivers with libata-based drivers
+    - Enable BLK_DEV_SD as built-in on all platforms
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
