Revert "vlan/macvlan: propagate transmission state to upper layers" (Closes: #585770)
svn path=/dists/sid/linux-2.6/; revision=15869

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     - Set io_map_base for several PCI bridges lacking it
     - Replace per-platform built-in IDE drivers with libata-based drivers
     - Enable BLK_DEV_SD as built-in on all platforms
+  * Revert "vlan/macvlan: propagate transmission state to upper layers"
+    (Closes: #585770)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
