--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,10 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * QNAP TS-11x/TS-21x: Add MPP36 (RAM) and MPP44 (board ID).
   * Add support for the HP t5325 Thin Client.
 
+  [ Bastian Blank ]
+  * Disable mISDN support for NETJet cards. The driver binds a generic PCI
+    bridge.
+
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
 linux-2.6 (2.6.32-15) unstable; urgency=low
