--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
     bridge.
+  * Disable ISDN4Linux drivers.
 
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
