linux-base: Don't identify LVM2 PVs by UUID (Closes: #585852)
svn path=/dists/sid/linux-2.6/; revision=15873

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     - Enable BLK_DEV_SD as built-in on all platforms
   * Revert "vlan/macvlan: propagate transmission state to upper layers"
     (Closes: #585770)
+  * linux-base: Don't identify LVM2 PVs by UUID (Closes: #585852)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
