--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * Add stable 2.6.32.15
-  * Add mantis DVB driver and mb86a16 and tda665x DVB front-ends,
-    backported by Bjørn Mork (Closes: #577264)
+  * Add mantis and hopper DVB drivers with mb86a16 and tda665x DVB
+    front-ends, backported by Bjørn Mork (Closes: #577264)
   * Build inet_lro as a module
   * [sparc] Enable CONFIG_FB_XVR500, CONFIG_FB_XVR2500 (Closes: #508108)
   * Update Spanish debconf templates, thanks to Omar Campagne
