--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ linux-2.6 (2.6.34-1~experimental.3) UNRELEASED; urgency=low
     - Replace per-platform built-in IDE drivers with libata-based drivers
     - Enable BLK_DEV_SD as built-in on all platforms
 
+  [ maximilian attems ]
+  * Enable DRM_RADEON_KMS.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 09 Jun 2010 23:03:38 +0100
 
 linux-2.6 (2.6.34-1~experimental.2) experimental; urgency=low
