--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
+  * [sh4] optimize runtime disabling of trapped I/O. 
   * [mips] backport mips/swarm: fix M3 TLB exception handler.
 
   [ Moritz Muehlenhoff ]
