--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,10 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Revert "vlan/macvlan: propagate transmission state to upper layers"
     (Closes: #585770)
   * linux-base: Don't identify LVM2 PVs by UUID (Closes: #585852)
+  * usb-serial: Add generic USB WWAN code, backported by Mark Hymers
+    (Closes: #585661)
+    - option, qcserial: Use generic USB WWAN code
+    - qcserial: Add support for Qualcomm Gobi 2000 devices
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
