radeon: Fix MacBook Pro connector quirk (Closes: #585943)
svn path=/dists/sid/linux-2.6/; revision=15879

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     (Closes: #585661)
     - option, qcserial: Use generic USB WWAN code
     - qcserial: Add support for Qualcomm Gobi 2000 devices
+  * radeon: Fix MacBook Pro connector quirk (Closes: #585943)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
