[x86] Fix confusion between rtl8192u_usb and rtl8192s_usb drivers (Closes: #584945):
- Enable rtl8192u_usb driver
- Fix and update device ID table in rtl8192s_usb driver

svn path=/dists/trunk/linux-2.6/; revision=15882

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ linux-2.6 (2.6.34-1~experimental.3) UNRELEASED; urgency=low
     - Set io_map_base for several PCI bridges lacking it
     - Replace per-platform built-in IDE drivers with libata-based drivers
     - Enable BLK_DEV_SD as built-in on all platforms
+  * [x86] Fix confusion between rtl8192u_usb and rtl8192s_usb drivers
+    (Closes: #584945):
+    - Enable rtl8192u_usb driver
+    - Fix and update device ID table in rtl8192s_usb driver
 
   [ maximilian attems ]
   * Enable DRM_RADEON_KMS.
