Get rid of the stem template variable (=ST)
We're not going to rename back to 'kernel' any time soon.

svn path=/dists/sid/linux-2.6/; revision=15884

--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -304,10 +304,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Tento systém používá platný soubor /etc/${loader}.conf, který obsahuje "
-"${kimage}-=V. Odstranění =ST-image-=V tento soubor zneplatní."
+"${kimage}-=V. Odstranění linux-image-=V tento soubor zneplatní."
 
 #. Type: boolean
 #. Description
