--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -313,10 +313,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Dette system bruger en gyldig /etc/${loader}.conf-fil som nævner ${kimage}-"
-"=V. Fjernelse af =ST-image-=V vil invalidere den fil."
+"=V. Fjernelse af linux-image-=V vil invalidere den fil."
 
 #. Type: boolean
 #. Description
