--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -323,10 +323,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Dieses System nutzt eine gültige /etc/${loader}.conf-Datei, in der ${kimage}-"
-"=V enthalten ist. Durch das Entfernen von =ST-image-=V wird diese Datei "
+"=V enthalten ist. Durch das Entfernen von linux-image-=V wird diese Datei "
 "ungültig."
 
 #. Type: boolean
