--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -352,10 +352,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Este sistema usa un fichero «/etc/${loader}.conf» válido que menciona "
-"«${kimage}-=V». Eliminar «=ST-image-=V» invalidará ese fichero."
+"«${kimage}-=V». Eliminar «linux-image-=V» invalidará ese fichero."
 
 #. Type: boolean
 #. Description
