--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -311,10 +311,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "See süsteem kasutab kehtivat /etc/${loader}.conf faili, mis mainib ${kimage}-"
-"=V. Eemaldades =ST-image-=V muudab selle faili kehtetuks."
+"=V. Eemaldades linux-image-=V muudab selle faili kehtetuks."
 
 #. Type: boolean
 #. Description
