--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -332,10 +332,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Le fichier /etc/${loader}.conf contenant la mention « ${kimage}-=V » est "
-"valable. Enlever « =ST-image-=V » rendra ce fichier non valable."
+"valable. Enlever « linux-image-=V » rendra ce fichier non valable."
 
 #. Type: boolean
 #. Description
