--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -312,10 +312,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "このシステムは、${kimage}-=V について記述した有効な /etc/${loader}.conf ファ"
-"イルを使用しています。=ST-image-=V の削除はこのファイルを無効化することになり"
+"イルを使用しています。linux-image-=V の削除はこのファイルを無効化することになり"
 "ます。"
 
 #. Type: boolean
