--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -321,10 +321,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Este sistema usa um ficheiro /etc/${loader}.conf válido que menciona "
-"${kimage}-=V. Remover =ST-image-=V irá invalidar esse ficheiro."
+"${kimage}-=V. Remover linux-image-=V irá invalidar esse ficheiro."
 
 #. Type: boolean
 #. Description
