--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -316,10 +316,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "В данной системе используется корректный файл /etc/${loader}.conf, в котором "
-"указано ${kimage}-=V. Удаление =ST-image-=V сделает файл некорректным."
+"указано ${kimage}-=V. Удаление linux-image-=V сделает файл некорректным."
 
 #. Type: boolean
 #. Description
