--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -314,10 +314,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Detta system använder en korrekt /etc/${loader}.conf-fil som pekar ut "
-"${kimage}-=V. Att ta bort =ST-image-=V kommer göra filen inaktuell."
+"${kimage}-=V. Att ta bort linux-image-=V kommer göra filen inaktuell."
 
 #. Type: boolean
 #. Description
