--- a/debian/po/templates.pot
+++ b/debian/po/templates.pot
@@ -270,7 +270,7 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 
 #. Type: boolean
