--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -309,10 +309,10 @@ msgstr ""
 #: ../templates/temp.image.plain/templates:7001
 msgid ""
 "This system uses a valid /etc/${loader}.conf file that mentions ${kimage}-"
-"=V. Removing =ST-image-=V will invalidate that file."
+"=V. Removing linux-image-=V will invalidate that file."
 msgstr ""
 "Hệ thống này sử dụng một tập tin cấu hình « /etc/${loader}.conf » mà xác định "
-"« ${kimage}-=V ». Gỡ bỏ mục « =ST-image-=V » thì làm cho tập tin đó không có "
+"« ${kimage}-=V ». Gỡ bỏ mục « linux-image-=V » thì làm cho tập tin đó không có "
 "hiệu lực."
 
 #. Type: boolean
