--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -6,11 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: linux-2.6 2.6.32-11\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 22:14+0200\n"
-"PO-Revision-Date: 2010-05-08 11:40+0200\n"
+"Report-Msgid-Bugs-To: linux-2.6@packages.debian.org\n"
+"POT-Creation-Date: 2010-06-18 05:20+0100\n"
+"PO-Revision-Date: 2010-06-18 05:27+0100\n"
 "Last-Translator: Holger Wansing <linux@wansing-online.de>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -359,12 +360,6 @@ msgstr ""
 "Auf diesem System läuft derzeit Linux ${runningversion} und Sie installieren "
 "gerade Linux ${version}. In der neuen Version könnten einige Treiber, die "
 "auf diesem System verwendet werden, zusätzliche Firmware-Dateien benötigen:"
-
-#. Type: note
-#. Description
-#: ../templates/temp.image.plain/templates:8001
-msgid "${missing}"
-msgstr "${missing}"
 
 #. Type: note
 #. Description
