--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -28,8 +28,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: linux-2.6 2.6.32+5\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 22:14+0200\n"
+"Report-Msgid-Bugs-To: linux-2.6@packages.debian.org\n"
+"POT-Creation-Date: 2010-06-18 05:20+0100\n"
 "PO-Revision-Date: 2010-06-06 19:04+0200\n"
 "Last-Translator: Omar Campagne <ocampagne@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -387,12 +387,6 @@ msgstr ""
 "Este sistema ejecuta actualmente la versión ${runningversion} de Linux, y se "
 "está instalando la versión ${version}. Puede que los controladores incluidos "
 "en la nueva versión requieran ficheros de firmware adicionales."
-
-#. Type: note
-#. Description
-#: ../templates/temp.image.plain/templates:8001
-msgid "${missing}"
-msgstr "${missing}"
 
 #. Type: note
 #. Description
