--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -8,11 +8,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: linux-2.6 2.6.32-11\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 22:14+0200\n"
+"Report-Msgid-Bugs-To: linux-2.6@packages.debian.org\n"
+"POT-Creation-Date: 2010-06-18 05:20+0100\n"
 "PO-Revision-Date: 2010-04-24 14:20+0300\n"
 "Last-Translator: mihkel <turakas gmail com>\n"
 "Language-Team: Estonian <et@li.org>\n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -345,12 +346,6 @@ msgstr ""
 "See süsteem kasutab praegu Linuxi versiooni ${runningversion} ja sina "
 "paigaldad versiooni ${version}. Uues versionis võivad mõned ajurid vajada "
 "lisaks püsivara faile:"
-
-#. Type: note
-#. Description
-#: ../templates/temp.image.plain/templates:8001
-msgid "${missing}"
-msgstr "${missing}"
 
 #. Type: note
 #. Description
