--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -6,11 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: linux-2.6 2.6.32-11\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 22:14+0200\n"
+"Report-Msgid-Bugs-To: linux-2.6@packages.debian.org\n"
+"POT-Creation-Date: 2010-06-18 05:20+0100\n"
 "PO-Revision-Date: 2010-04-23 22:12+0100\n"
 "Last-Translator: Américo Monteiro <a_monteiro@netcabo.pt>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -359,12 +360,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../templates/temp.image.plain/templates:8001
-msgid "${missing}"
-msgstr "${missing}"
-
-#. Type: note
-#. Description
-#: ../templates/temp.image.plain/templates:8001
 msgid ""
 "Most firmware files are not included in the system because they do not "
 "conform to the Debian Free Software Guidelines. You may need to reconfigure "
@@ -375,20 +370,3 @@ msgstr ""
 "não respeitam as Guidelines da Debian Free Software. Você pode precisar de "
 "reconfigurar o gestor de pacotes para incluir as secções contrib e non-free "
 "do arquivo de pacotes antes de poder instalar estes ficheiros de firmware."
-
-#~ msgid "${relabel}"
-#~ msgstr "${relabel}"
-
-#~ msgid "${files}"
-#~ msgstr "${files}"
-
-#~ msgid "${id_map}"
-#~ msgstr "${id_map}"
-
-#~ msgid "Please check these configuration files before rebooting"
-#~ msgstr ""
-#~ "Por favor verifique estes ficheiros de configuração antes de reiniciar o "
-#~ "sistema"
-
-#~ msgid "${unconverted}"
-#~ msgstr "${unconverted}"
