--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -6,11 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: linux-2.6 new\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 22:14+0200\n"
+"Report-Msgid-Bugs-To: linux-2.6@packages.debian.org\n"
+"POT-Creation-Date: 2010-06-18 05:20+0100\n"
 "PO-Revision-Date: 2010-04-24 10:31+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -350,12 +351,6 @@ msgstr ""
 "В этой системе сейчас работает ядро Linux ${runningversion} и производится "
 "установка Linux ${version}. В новой версии некоторым драйверам, используемым "
 "в данной системе, могут потребоваться дополнительные файлы микропрограмм:"
-
-#. Type: note
-#. Description
-#: ../templates/temp.image.plain/templates:8001
-msgid "${missing}"
-msgstr "${missing}"
 
 #. Type: note
 #. Description
