--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -6,11 +6,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: linux-2.6\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-23 22:14+0200\n"
+"Report-Msgid-Bugs-To: linux-2.6@packages.debian.org\n"
+"POT-Creation-Date: 2010-06-18 05:20+0100\n"
 "PO-Revision-Date: 2010-04-26 23:37+0100\n"
 "Last-Translator: Martin Bagge <brother@bsnet.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -348,12 +349,6 @@ msgstr ""
 "Detta system kör Linux ${runningversion} och du installerar Linux "
 "${version}. I den nya versionen kan vissa drivrutiner behöva ytterligare "
 "firmware-filer:"
-
-#. Type: note
-#. Description
-#: ../templates/temp.image.plain/templates:8001
-msgid "${missing}"
-msgstr "${missing}"
 
 #. Type: note
 #. Description
