m25p80: Add support for Macronix 25L8005.
svn path=/dists/sid/linux-2.6/; revision=15891

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Add support for OpenRD-Ultimate.
   * QNAP TS-11x/TS-21x: Add MPP36 (RAM) and MPP44 (board ID).
   * Add support for the HP t5325 Thin Client.
+  * m25p80: Add support for Macronix 25L8005.
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
