--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * QNAP TS-11x/TS-21x: Add MPP36 (RAM) and MPP44 (board ID).
   * Add support for the HP t5325 Thin Client.
   * m25p80: Add support for Macronix 25L8005.
+  * Add framebuffer driver for XGI chipsets.
+  * [armel/kirkwood] Enable FB_XGI and FRAMEBUFFER_CONSOLE.
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
