[armel] Make MOUSE_PS2 modular.
svn path=/dists/sid/linux-2.6/; revision=15894

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * m25p80: Add support for Macronix 25L8005.
   * Add framebuffer driver for XGI chipsets.
   * [armel/kirkwood] Enable FB_XGI and FRAMEBUFFER_CONSOLE.
+  * [armel] Make MOUSE_PS2 modular.
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
