--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Add framebuffer driver for XGI chipsets.
   * [armel/kirkwood] Enable FB_XGI and FRAMEBUFFER_CONSOLE.
   * [armel] Make MOUSE_PS2 modular.
+  * [armel] Build INPUT_UINPUT for all flavours.
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
