--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,17 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * [armel/kirkwood] Enable FB_XGI and FRAMEBUFFER_CONSOLE.
   * [armel] Make MOUSE_PS2 modular.
   * [armel] Build INPUT_UINPUT for all flavours.
+  * Update Marvell CESA (mv_cesa) driver (Closes: #585790):
+    - Invoke the user callback from a softirq context
+    - Remove compiler warning in mv_cesa driver
+    - Fix situation where the dest sglist is organized differently than...
+    - Fix situations where the src sglist spans more data than the reques...
+    - Enqueue generic async requests
+    - Rename a variable to a more suitable name
+    - Execute some code via function pointers rathr than direct calls
+    - Make the copy-back of data optional
+    - Support processing of data from previous requests
+    - Add sha1 and hmac(sha1) async hash drivers
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
