Move NEWS from linux-2.6 to linux-latest-2.6
Every kernel ABI bump introduces new binary packages, which are
normally installed as dependencies of an upgraded linux-image package
built from linux-latest-2.6.

Since apt-listchanges only shows NEWS for upgraded packages, not newly
installed packages, we should put it in the linux-latest-2.6 packages.
Backdate the description of the libata transition to the release of
linux-latest-2.6 which depends on it.

This also means that NEWS won't be shown for linux-libc-dev upgrades
which it doesn't affect. (Closes: #586401)

svn path=/dists/sid/linux-2.6/; revision=15899

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     - qcserial: Add support for Qualcomm Gobi 2000 devices
   * radeon: Fix MacBook Pro connector quirk (Closes: #585943)
   * r8169: Fix MDIO timing (Closes: #583139)
+  * Move NEWS to linux-latest-2.6 (Closes: #586401)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
