3c59x: Change locking to avoid use of disable_irq() (Closes: #586967)
svn path=/dists/sid/linux-2.6/; revision=15905

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * radeon: Fix MacBook Pro connector quirk (Closes: #585943)
   * r8169: Fix MDIO timing (Closes: #583139)
   * Move NEWS to linux-latest-2.6 (Closes: #586401)
+  * 3c59x: Change locking to avoid use of disable_irq() (Closes: #586967)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
