--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * r8169: Fix MDIO timing (Closes: #583139)
   * Move NEWS to linux-latest-2.6 (Closes: #586401)
   * 3c59x: Change locking to avoid use of disable_irq() (Closes: #586967)
+  * Enable IPv6 support for IPVS (IP_VS_IPV6) (Closes: #584549)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
