Revert "tpm: autoload tpm_tis based on system PnP IDs" (Closes: #584273)
svn path=/dists/sid/linux-2.6/; revision=15908

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Move NEWS to linux-latest-2.6 (Closes: #586401)
   * 3c59x: Change locking to avoid use of disable_irq() (Closes: #586967)
   * Enable IPv6 support for IPVS (IP_VS_IPV6) (Closes: #584549)
+  * Revert "tpm: autoload tpm_tis based on system PnP IDs", included in
+    stable 2.6.32.12 (Closes: #584273)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
