linux-base: If the disk ID update process fails, give the user a chance to retry or change their answers (Closes: #585609)
svn path=/dists/sid/linux-2.6/; revision=15912

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Enable IPv6 support for IPVS (IP_VS_IPV6) (Closes: #584549)
   * Revert "tpm: autoload tpm_tis based on system PnP IDs", included in
     stable 2.6.32.12 (Closes: #584273)
+  * linux-base: If the disk ID update process fails, give the user a
+    chance to retry or change their answers (Closes: #585609)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
