--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     stable 2.6.32.12 (Closes: #584273)
   * linux-base: If the disk ID update process fails, give the user a
     chance to retry or change their answers (Closes: #585609)
+  * asix: fix setting mac address for AX88772 (Closes: #587580)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
