ipv6: Fix a couple of bugs affecting temporary address lifetimes
svn path=/dists/sid/linux-2.6/; revision=15919

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,9 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * linux-base: If the disk ID update process fails, give the user a
     chance to retry or change their answers (Closes: #585609)
   * asix: fix setting mac address for AX88772 (Closes: #587580)
+  * ipv6: Clamp reported valid_lft to a minimum of 0 (Closes: #514644)
+  * ipv6: Use interface max_desync_factor instead of static default
+    (Closes: #514646)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
