Add stable 2.6.32.16-rc1
ath9k has been further patched since we applied
ath9k-add-support-for-802.11n-bonded-out-AR2427.patch so we need a
separate patch to revert it.

This stable release patches option so we need a new version of
USB-option-Use-generic-USB-wwan-code.patch.

svn path=/dists/sid/linux-2.6/; revision=15923

--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * ipv6: Clamp reported valid_lft to a minimum of 0 (Closes: #514644)
   * ipv6: Use interface max_desync_factor instead of static default
     (Closes: #514646)
+  * Add stable 2.6.32.16-rc1
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
