--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * ipv6: Use interface max_desync_factor instead of static default
     (Closes: #514646)
   * Add stable 2.6.32.16-rc1
+  * Add drm changes from stable 2.6.33.6-rc1
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
