[ia64, powerpc, sparc, x86] Enable KPROBES and KRETPROBES (Closes: #584130)
svn path=/dists/sid/linux-2.6/; revision=15927

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     (Closes: #514646)
   * Add stable 2.6.32.16-rc1
   * Add drm changes from stable 2.6.33.6-rc1
+  * [ia64, powerpc, sparc, x86] Enable KPROBES and KRETPROBES
+    (Closes: #584130)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
