rtl8192s_usb: Fix various bugs
svn path=/dists/sid/linux-2.6/; revision=15929

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,13 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Add drm changes from stable 2.6.33.6-rc1
   * [ia64, powerpc, sparc, x86] Enable KPROBES and KRETPROBES
     (Closes: #584130)
+  * rtl8192s_usb: Fix various bugs
+    - Check for skb allocation failure in 2 more places
+    - Update LED control code
+    - Clean up in case of an error in module initialisation
+    - Rename and remove proc directories correctly if an interface is
+      not called wlan0 (Closes: #582972)
+    - Correct device ID table (Closes: #584945, #587985)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
