Enable USB_SERIAL_TI (Closes: #588096) and USB_SERIAL_WHITEHEAT
svn path=/dists/trunk/linux-2.6/; revision=15936

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,7 @@ linux-2.6 (2.6.35~rc3-1~experimental.1) UNRELEASED; urgency=low
   * [x86] Enable r8192u_usb driver
   * Add linux-tools-<version> package containing the perf tool
     (Closes: #548715)
+  * Enable SERIAL_USB_TI (Closes: #588096) and SERIAL_USB_WHITEHEAT
 
   [ maximilian attems ]
   * Enable DRM_RADEON_KMS.
