--- a/debian/changelog
+++ b/debian/changelog
@@ -58,7 +58,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Add r8192u_usb driver
   * Add linux-tools-<version> package containing the perf tool
     (Closes: #548715)
-  * Enable SERIAL_USB_TI (Closes: #588096) and SERIAL_USB_WHITEHEAT
+  * Enable USB_SERIAL_TI (Closes: #588096) and USB_SERIAL_WHITEHEAT
 
   [ Aurelien Jarno ]
   * [sh4] optimize runtime disabling of trapped I/O. 
