Update DisplayLink (udlfb) driver
svn path=/dists/sid/linux-2.6/; revision=15941

--- a/debian/changelog
+++ b/debian/changelog
@@ -90,6 +90,18 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     - Make the copy-back of data optional
     - Support processing of data from previous requests
     - Add sha1 and hmac(sha1) async hash drivers
+  * Update DisplayLink (udlfb) driver:
+    - add dynamic modeset support
+    - checkpatch cleanup
+    - reorganize function order
+    - pre-allocated urb list helpers
+    - clean up function naming
+    - Add functions to expose sysfs metrics and controls
+    - Rework startup and teardown to fix race conditions
+    - improved rendering performance
+    - Support for fbdev mmap clients (defio)
+    - explicit dependencies and warnings
+    - remove printk and small cleanup
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
