--- a/debian/changelog
+++ b/debian/changelog
@@ -102,6 +102,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     - Support for fbdev mmap clients (defio)
     - explicit dependencies and warnings
     - remove printk and small cleanup
+  * [armel/kirkwood] Enable FB_UDL.
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
