[armel] Disable PARPORT_PC (Closes: #588164)
svn path=/dists/sid/linux-2.6/; revision=15943

--- a/debian/changelog
+++ b/debian/changelog
@@ -103,6 +103,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     - explicit dependencies and warnings
     - remove printk and small cleanup
   * [armel/kirkwood] Enable FB_UDL.
+  * [armel] Disable PARPORT_PC (Closes: #588164)
 
   [ Bastian Blank ]
   * Disable mISDN support for NETJet cards. The driver binds a generic PCI
