add bug closer for 2.6.32.16
svn path=/dists/sid/linux-2.6/; revision=15945

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Add stable 2.6.32.16-rc1
     - Fixes CVE-2010-1641, CVE-2010-1187, CVE-2010-1148, CVE-2010-1173
       and CVE-2010-2071
+    - libata: disable ATAPI AN by default (Closes: #582737)
   * Add drm changes from stable 2.6.33.6-rc1
   * [ia64, powerpc, sparc, x86] Enable KPROBES and KRETPROBES
     (Closes: #584130)
