--- a/debian/changelog
+++ b/debian/changelog
@@ -42,11 +42,11 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * ipv6: Clamp reported valid_lft to a minimum of 0 (Closes: #514644)
   * ipv6: Use interface max_desync_factor instead of static default
     (Closes: #514646)
-  * Add stable 2.6.32.16-rc1
+  * Add stable 2.6.32.16:
     - Fixes CVE-2010-1641, CVE-2010-1187, CVE-2010-1148, CVE-2010-1173
       and CVE-2010-2071
     - libata: disable ATAPI AN by default (Closes: #582737)
-  * Add drm changes from stable 2.6.33.6-rc1
+  * Add drm changes from stable 2.6.33.6
   * [ia64, powerpc, sparc, x86] Enable KPROBES and KRETPROBES
     (Closes: #584130)
   * r8192s_usb: Fix various bugs:
