--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
+linux-2.6 (2.6.32-16) unstable; urgency=low
 
   [ dann frazier ]
   * [hppa] clear floating point exception flag on SIGFPE signal
@@ -114,7 +114,7 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   [ maximilian attems]
   * Update openvz patch to 5fd638726a69.
 
- -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 05 Jul 2010 22:13:33 +0100
 
 linux-2.6 (2.6.32-15) unstable; urgency=low
 
