--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.32-17) unstable; urgency=low
+
+  * agp: add no warn since we have a fallback to vmalloc paths.
+
+ -- maximilian attems <maks@debian.org>  Wed, 07 Jul 2010 12:33:04 +0200
+
 linux-2.6 (2.6.32-16) unstable; urgency=low
 
   [ dann frazier ]
