--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-17) unstable; urgency=low
+linux-2.6 (2.6.32-17) UNRELEASED; urgency=low
 
   * agp: add no warn since we have a fallback to vmalloc paths.
 
