--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 linux-2.6 (2.6.32-17) UNRELEASED; urgency=low
 
+  [ maximilian attems ]
   * agp: add no warn since we have a fallback to vmalloc paths.
+
+  [ Ben Hutchings ]
+  * linux-tools: Fix build for hppa and do not attempt to build for
+    architectures where perf events are not available
 
  -- maximilian attems <maks@debian.org>  Wed, 07 Jul 2010 12:33:04 +0200
 
