--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ linux-2.6 (2.6.32-17) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * linux-tools: Fix build for hppa and do not attempt to build for
-    architectures where perf events are not available
+    architectures where perf events are not available (Closes: #588409)
 
  -- maximilian attems <maks@debian.org>  Wed, 07 Jul 2010 12:33:04 +0200
 
