Add build-dependency on binutils-dev to enable symbol demangling in perf
svn path=/dists/sid/linux-2.6/; revision=15970

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ linux-2.6 (2.6.32-17) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * linux-tools: Fix build for hppa and do not attempt to build for
     architectures where perf events are not available (Closes: #588409)
+  * linux-tools: Add build-dependency on binutils-dev to enable symbol
+    demangling in perf
 
  -- maximilian attems <maks@debian.org>  Wed, 07 Jul 2010 12:33:04 +0200
 
