drm/i915: Fix memory corruption on resume from hibernation (Closes: #534422)
svn path=/dists/sid/linux-2.6/; revision=15971

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ linux-2.6 (2.6.32-17) UNRELEASED; urgency=low
     architectures where perf events are not available (Closes: #588409)
   * linux-tools: Add build-dependency on binutils-dev to enable symbol
     demangling in perf
+  * drm/i915: Fix memory corruption on resume from hibernation
+    (Closes: #534422)
 
  -- maximilian attems <maks@debian.org>  Wed, 07 Jul 2010 12:33:04 +0200
 
