Prepare to release linux-2.6 (2.6.32-17).
svn path=/dists/sid/linux-2.6/; revision=15975

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-17) UNRELEASED; urgency=low
+linux-2.6 (2.6.32-17) unstable; urgency=low
 
   [ maximilian attems ]
   * agp: add no warn since we have a fallback to vmalloc paths.
@@ -11,7 +11,7 @@ linux-2.6 (2.6.32-17) UNRELEASED; urgency=low
   * drm/i915: Fix memory corruption on resume from hibernation
     (Closes: #534422)
 
- -- maximilian attems <maks@debian.org>  Wed, 07 Jul 2010 12:33:04 +0200
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 Jul 2010 16:40:38 +0100
 
 linux-2.6 (2.6.32-16) unstable; urgency=low
 
