Prepare to release linux-2.6 (2.6.35~rc4-1~experimental.1).
svn path=/dists/trunk/linux-2.6/; revision=15978

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.35~rc4-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.35~rc4-1~experimental.1) experimental; urgency=low
   
   * New upstream snapshot
     - [hppa] clear floating point exception flag on SIGFPE signal
@@ -66,7 +66,7 @@ linux-2.6 (2.6.35~rc4-1~experimental.1) UNRELEASED; urgency=low
     bridge.
   * Disable ISDN4Linux drivers.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 09 Jun 2010 23:03:38 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 10 Jul 2010 21:53:57 +0100
 
 linux-2.6 (2.6.34-1~experimental.2) experimental; urgency=low
 
