--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ linux-2.6 (2.6.36~rc4-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
 
+  [ Ben Hutchings ]
+  * speakup: Update to match Debian package version 3.1.5.dfsg.1-1
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 13 Sep 2010 01:25:14 +0100
 
 linux-2.6 (2.6.35-1~experimental.3) experimental; urgency=low
