--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 linux-2.6 (2.6.36~rc4-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
+    - 3c59x: Fix deadlock in vortex_error() (Closes: #595554)
 
   [ Ben Hutchings ]
   * speakup: Update to match Debian package version 3.1.5.dfsg.1-1
