linux-base: Remove dependency on libapt-pkg-perl (Closes: #589996, really)
svn path=/dists/trunk/linux-2.6/; revision=16357

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (2.6.36~rc5-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * linux-base: Remove dependency on libapt-pkg-perl (Closes: #589996, really)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
+
 linux-2.6 (2.6.36~rc5-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
