--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (2.6.36~rc5-1~experimental.2) UNRELEASED; urgency=low
   * linux-base: Remove dependency on libapt-pkg-perl (Closes: #589996, really)
   * drm/i915: Ensure that the crtcinfo is populated during mode_fixup()
     (Closes: #592415)
+  * USB: fix bug in initialization of interface minor numbers (Closes: #598207)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
 
