Explicitly disable INTEL_IDLE, which cannot be built as a module any more
svn path=/dists/trunk/linux-2.6/; revision=16385

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * linux-base: Remove dependency on libapt-pkg-perl (Closes: #589996, really)
+  * Disable INTEL_IDLE.  It can no longer be built as a module and so was
+    actually disabled by the previous version, but I do not consider it ready
+    to build-in yet.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
 
