--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
     to build-in yet.
   * Enable NETFILTER_XT_TARGET_CHECKSUM, NETFILTER_XT_TARGET_IDLETIMER,
     NETFILTER_XT_MATCH_CPU, NETFILTER_XT_MATCH_IPVS
+  * Reenable LOCKUP_DETECTOR, accidentally disabled by the previous version
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
 
