--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,11 @@ linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
   * Enable modular NETFILTER_XT_TARGET_CHECKSUM, NETFILTER_XT_TARGET_IDLETIMER,
     NETFILTER_XT_MATCH_CPU, NETFILTER_XT_MATCH_IPVS
   * Reenable LOCKUP_DETECTOR, accidentally disabled by the previous version
+  * Enable modular AD525X_DPOT_I2C, ATM_NICSTAR, CAN_ESD_USB2, CHELSIO_T4VF,
+    FIREWIRE_NOSY, MTD_PCMCIA, ORINOCO_USB, PPS_CLIENT_LDISC, RAMOOPS,
+    SERIAL_MFD_HSU, WL1271_SDIO, WL1271_SPI
+  * Enable BT_HCIUART_ATH3K
+  * [x86] Enable modular SENSORS_PKGTEMP
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
 
