Enable all IR modules (LIRC only on x86)
svn path=/dists/trunk/linux-2.6/; revision=16394

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
     SERIAL_MFD_HSU, WL1271_SDIO, WL1271_SPI
   * Enable BT_HCIUART_ATH3K
   * [x86] Enable modular SENSORS_PKGTEMP
+  * Enable modular IR_CORE, RC_MAP, all IR decoders, IR_IMON, IR_MCEUSB,
+    IR_ENE, IR_STREAMZAP
+  * [x86] Enable modular LIRC drivers
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
 
